--- a/Find_vif.ipynb
+++ b/Find_vif.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding VIF in Python:"
+    "# Finding VIF in Python:\n",
+    "VIF is a measure of how much the variance of the coefficient derived from the model is inflated by collinearity."
    ]
   },
   {
